--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ huggingface-hub>=0.22.0
 imageio
 matplotlib
 numpy>=2.0.0
-opencv-python
+opencv-python; platform_machine != "aarch64"
 pandas
 pillow>=10.2.0
 protobuf>=4.25.3
@@ -16,9 +16,9 @@ termcolor
 timm
 tqdm
 trimesh
-triton>=2.4.0
-torch>=2.4.0
-torchvision>=0.19.0
-torchaudio>=2.4.0
+triton>=2.4.0; platform_machine != "aarch64"
+torch>=2.4.0; platform_machine != "aarch64"
+torchvision>=0.19.0; platform_machine != "aarch64"
+torchaudio>=2.4.0; platform_machine != "aarch64"
 wandb
-xformers>=0.0.26
+xformers>=0.0.26; platform_machine != "aarch64"
